fix: aligned navbar

--- a/styles/Home.scss
+++ b/styles/Home.scss
@@ -4,25 +4,31 @@
   margin: 0 auto;
   overflow: hidden;
   .home-nav {
-    width: 100%;
     position: absolute;
-    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    height: 10vh;
+    width: 75%;
     font-family: $font;
     color: $white;
     font-weight: 700;
+    z-index: 2;
+    @media (max-width: 768px) {
+      width: 90%;
+    }
     .space-between {
+      width: 100%;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0 32px;
     }
     .logo {
       font-size: 1.4rem;
       user-select: none;
     }
     .nav-list {
-      position: relative;
-      z-index: 2;
       margin: 0;
       padding: 0;
       list-style-type: none;
@@ -63,7 +69,7 @@
       min-height: 75vh;
       padding: 3rem 0;
     }
-    @media (max-width: 967px) {
+    @media (max-width: 768px) {
       width: 90%;
     }
     .cta {
